<resources>
    <string name="app_name">My Application</string>
    <string name="not_access">You do not have access to telephone data</string>
    <string name="default_for_imei">Imei not found</string>
    <string name="permission_description">we need permission access for imai</string>
    <string name="never_permission_description">we need permission access for imai. you can change access in settings</string>
    <string name="name_for_update_button">Get Imei</string>
    <string name="ok">ok</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="import_item">Profile</string>
    <string name="gallery_item">Gallery</string>
    <string name="slideshow_item">Slideshow</string>
    <string name="tools_item">Imei</string>
    <string name="communicate_item">Communicate</string>
    <string name="share_item">Share</string>
    <string name="send_item">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="user_info_template">
         %s\ %s\nPhone: %s\nEmail: %s\n
    </string>
    <!-- Buttons -->
    <string name="edit_button_name">Edit</string>
    <string name="back_to_user_info">Back</string>
    <string name="save_user_info">Save</string>
    <string name="log_in_button_name">Log In</string>
    <string name="go_to_registration_button_name">Go to Registration</string>
    <string name="registration_button_name">Registration</string>


    <!-- Labels -->
    <string name="first_name_label">First name</string>
    <string name="last_name_label">Last name</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm password</string>


    <!-- Empty field error messages -->
    <string name="message_for_empty_email">Email field cannot be empty</string>
    <string name="message_for_empty_password">Password field cannot be empty</string>
    <string name="message_for_empty_confirm_password">Confirm password field cannot be empty</string>
    <string name="message_for_empty_first_name">First name field cannot be empty</string>
    <string name="message_for_empty_last_name">Last name field cannot be empty</string>
    <string name="message_for_empty_phone">Phone field cannot be empty</string>

    <!-- invalid field messages -->
    <string name="massage_for_not_match_password">confirm password and password must match</string>
    <string name="message_for_email_not_found">User with this email does not exist</string>
    <string name="message_for_missing_password">Wrong password</string>

    <!-- AlertDialog for logout !-->
    <string name="logout_description_for_dialog">Are you sure you want to log out?</string>
    <string name="positive_logout">Yes</string>
    <string name="negative_logout">No</string>
    <string name="registration">Registration</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="edit">Edit</string>
    <string name="update_imei">Update imei</string>
    <string name="rss_resource">RSS Resource</string>
    <string name="dvaaaaaa">DvAAAAAA</string>
    <string name="daaaaaa">DAAAAAA</string>


</resources>
