<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item-->
            <!--android:id="@+id/fragmentUser"-->
            <!--android:icon="@drawable/ic_menu_camera"-->
            <!--android:title="@string/import_item" />-->
        <item
            android:id="@+id/fragmentEmpty"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery_item" />
        <item
            android:id="@+id/fragmentEmpty2"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/slideshow_item" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools_item" />
    </group>

    <item android:title="@string/communicate_item">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_item" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send_item" />
        </menu>
    </item>

</menu>
